# guided-diffusion

./: .gitignore  pyproject.toml  setup_env.sh
datasets/: cifar10.py
evaluations/: evaluator.py  pyproject.toml
experiments/: debug_stuff.sh  job_naming.md  train_baseline.sh  train_baseline_without_sigma.sh  train_cond_openai.sh  train_distr_dispersion_all_layers_05.sh  train_distr_dispersion_all_layers_10.sh  train_distr_dispersion_last_layer_05.sh  train_distr_dispersion_last_layer_10.sh  train_distributional_implementation_check.sh  train_distributional_logsnr.sh  train_distributional_logsnr_eps_pred_without_sigma.sh  train_distributional_logsnr_without_sigma_better_channels.sh  train_distributional_logsnrinverted_without_sigma_better_channels.sh  train_distributional_noweighting.sh  train_distributional_noweighting_better_channels_smaller_lr.sh  train_distributional_noweighting_eps_pred.sh  train_distributional_noweighting_eps_pred_without_sigma.sh  train_distributional_noweighting_eps_pred_without_sigma_better_channels.sh  train_distributional_noweighting_eps_pred_without_sigma_full_batch.sh  train_distributional_noweighting_lambda_cosine.sh  train_distributional_noweighting_lambda_linear.sh  train_distributional_noweighting_lambda_linear_eps_pred.sh  train_distributional_noweighting_lambda_sigmoid.sh  train_distributional_noweighting_lambda_sigmoidshifted.sh  train_distributional_noweighting_without_sigma_better_channels.sh  train_distributional_noweighting_without_sigma_better_channels_better_heads.sh  train_distributional_noweighting_without_sigma_better_channels_even_smaller_lambda.sh  train_distributional_noweighting_without_sigma_better_channels_lambda_cosine.sh  train_distributional_noweighting_without_sigma_better_channels_lambda_cosine_beta_cosine.sh  train_distributional_noweighting_without_sigma_better_channels_lambda_linear_beta_linear.sh  train_distributional_noweighting_without_sigma_better_channels_smaller_lambda.sh  train_distributional_noweighting_without_sigma_better_channels_smaller_lr.sh  train_distributional_noweighting_without_sigma_full_batch.sh  train_distributional_noweighting_without_sigma_full_batch_better_channels.sh  train_original_openai.sh  train_uncond_openai.sh
experiments/baselines/: train_baseline.sh  train_original_openai.sh
experiments/curriculum/: distributional_start_at_00percent.sh  distributional_start_at_00percent_different_s.sh  distributional_start_at_10percent.sh  distributional_start_at_15percent.sh  distributional_start_at_20percent.sh  distributional_start_at_30percent.sh  distributional_start_at_40percent.sh  distributional_start_at_50percent.sh  distributional_start_at_60percent.sh  distributional_start_at_70percent.sh  distributional_start_at_80percent.sh  (+4 more)
guided_diffusion/: __init__.py  dist_util.py  gaussian_diffusion.py  logger.py  original_unet.py  scoring_rules.py  script_util.py  train_util.py  unet.py  wandb_utils.py
scripts/: image_sample.py  image_train.py
scripts_extra/: data_utils.py  dynamical_regimes.py  dynamical_regimes_2.py  image_sample_notebook.py  irreducible_variance.py  main.ipynb  plot_curriculum.py  plot_fid.py  plot_from_wandb.py  plot_schedules.ipynb
(+127 files in other folders)
