[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "guided-diffusion"
description = "Guided Diffusion Models"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "OpenAI", email = "info@openai.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "==3.10.*"
dependencies = [
    "tensorflow[and-cuda]",
    "numpy==1.*",
    "scipy",
    "pandas",
    "requests",
    "tqdm"
]

dynamic = ["version"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
